RESOLVED FIXED300041
[GStreamer] Sometimes progressive playback is not resumed after seek
https://bugs.webkit.org/show_bug.cgi?id=300041
Summary [GStreamer] Sometimes progressive playback is not resumed after seek
Enrique Ocaña
Reported 2025-10-02 12:55:34 PDT
Sometimes, in a downstream multimedia player, regular video playback remains paused after seek instead of resuming automatically. It will play normally when play() or another seek operation are manually triggered. Log analys shows that in the failing case the browser missed the state transition to 'HaveCurrentData', and application can't resume playback after seek. It was missed because it happened the gstreamer pipeline remains in state transition for too long and can't process buffering events. Normally it goes: seek -> Paused pipeline -> buffering (HaveCurrentData) -> finish_buffering(HaveEnoughData) -> start_playback. However, in the failing case, seek takes too long (~2sec) to set the PAUSED state on the pipeline and we are missing the buffering(HaveCurrentData) stage. See: https://github.com/WebPlatformForEmbedded/WPEWebKit/issues/1561
Attachments
Enrique Ocaña
Comment 1 2025-10-02 14:11:57 PDT
EWS
Comment 2 2025-10-03 05:40:18 PDT
Committed 300933@main (293dfbd834b9): <https://commits.webkit.org/300933@main> Reviewed commits have been landed. Closing PR #51698 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-03 05:41:25 PDT
Note You need to log in before you can comment on or make changes to this bug.